# ac35_platform_china

./: 000_clean.cmd  010_PushResource-SP-SDM.cmd  CMakeLists.txt  bVersion.bat  bVersion.cmd  build.cmd  configure.py  envsetup.cmd  pdk.ini
app/base/: 00_clean.cmd  01_build.cmd  02_down.cmd  03_tools.cmd  CMakeLists.txt  cmd.py  config.ini
app/base/resource/: resource
app/base/src/app/: cashier.c  global.c  main_code.c  pos_data.c  pos_param.c  secretKey.c  trans.c  trans_err.c  trans_menu.c  trans_online.c  trans_print.c  trans_search.c  trans_ui.c  trans_util.c
app/base/src/app/inc/: cashier.h  device.h  global.h  main_code.h  msg.h  msg_cn.h  msg_en.h  pos_data.h  secretKey.h  trans.h  trans_err.h
app/base/src/emv/: EMV_DownParam.c  EMV_DownParam.h  Emv_CL_Callback.c  Emv_CL_Callback.h  Emv_CT_Callback.c  Emv_CT_Callback.h  Emv_Callback.c  Emv_Callback.h  Emv_Config.c  Emv_Err.c  Emv_Param.c  Emv_Param.h  Emv_Trans.c  Emv_Trans.h  Emv_Utile.c  Emv_Utile.h  Pos_Menu.c  Pos_Menu.h  emv_ct_storage.c  emv_ct_storage.h
app/base/src/esign/: elecsign.c  elecsign.h  esign.cmake
app/base/src/logger/: logger.c  logger.h
app/base/src/utils/: iso8583.c  iso8583.h  iso8583_config.h  uMenu.c  uMenu.h
app/base/src/version/: builtinfo.c  builtinfo.h
doc/: P90开发手册_国内内部开发用.docx
etc/: applib.cmake  emvlib.cmake  model.cmake  path.cmake  sdk.cmake  signer.cmake  system.cmake  toolchain.cmake  userlib.cmake
etc/model/: P90_cfg.cmake  QR100_cfg.cmake  QR150BT_cfg.cmake  QR150_cfg.cmake  QR200_cfg.cmake  QR300_cfg.cmake  QR80st_cfg.cmake
etc/src/: main.c
libs/applib/1.0.10/inc/: applib.h  applib_def.h  applib_err.h  applib_tools.h  commuInit.h  datetime_settings.h  mdm_mq.h  mmi_commu.h  mmi_display.h  mmi_esignature.h  multilingual.h  ota_update.h  security_check.h  sysUi.h  uFile.h  utils.h
libs/applib/1.0.12/: verInfo.ini
libs/applib/1.0.12/inc/: applib.h  applib_def.h  cJSON.h  commuInit.h  datetime_settings.h  device_info.h  logo.h  mdm_mq.h  mmi_input.h  mmi_printer.h  mq.h  sysFile.h
libs/emv/1.1.5/include/: AppCallBack.h  EmvAidList.h  EmvCapkList.h  EmvCtKernelConfig.h  EmvCtKernelL2.h  EmvCtKernelMain.h  EmvCtKernelParam.h  EmvDataSize.h  EmvDataType.h  EmvExceptionFileList.h  EmvKernel.h  EmvRevocationIPKList.h  EmvTag.h  EmvTransHandle.h  EmvUtility.h  Kernel_Main.h  Kernel_Param.h  QVSDC.h
libs/mainApp/: MainApp_V0.16.1905061817_P90.img  MainApp_V0.19.1907161029_P90.img  MainApp_V0.19.1907161029_QR.img
libs/sdk_p90/1.1.34/include/: bwsdk.h  bwsdk_api.h
libs/sdk_p90/1.1.34/include/V2_2_2/: MercuryBarScan.h  MercuryCSTD.h  MercuryKeypad.h  MercuryMem.h  MercuryPlat.h  MercurySyn.h  MercuryTlsSha256.h  MercuryTts.h
libs/sdk_p90/1.1.34/include/V2_3_4/: MercuryBarScan.h  MercuryFile.h  MercuryI2C.h  MercuryPlat.h  MercuryTlsDes.h
libs/sdk_p90/1.1.34/include/aliyun/iot/exports/: iot_export_subdev.h
libs/sdk_p90/1.1.34/include/aliyun/iot/imports/: iot_import_dtls.h  iot_import_ota.h
libs/sdk_p90/1.1.34/include/aliyun/iot/utils/misc/: utils_list.h  utils_net.h  utils_timer.h
libs/sdk_p90/1.1.34/include/mbedtls/: platform.h
libs/sdk_p90/1.1.38/include/: bwsdk_api.h
libs/sdk_p90/1.1.38/include/V2_2_2/: MercuryDef.h  MercuryErrorValue.h  MercuryLibVer.h  MercuryMobile.h  MercuryNv.h  MercurySmartCard.h  MercuryTlsMd5.h
libs/sdk_p90/1.1.38/include/V2_3_4/: MercuryBignum.h  MercuryCom.h  MercuryFota.h  MercuryNet.h  MercuryTls.h
libs/sdk_p90/1.1.38/include/V2_3_6/: MercuryErrorValue.h  MercuryLittlefs.h  MercuryPWM.h  MercuryPowerManager.h  MercurySpi.h  MercuryTlsRsa.h  MercuryTlsSha1.h  SDK_Version.h
libs/sdk_p90/1.1.38/include/aliyun/iot/exports/: iot_export_mqtt.h
libs/sdk_p90/1.1.38/include/aliyun/iot/utils/: lite-list.h
libs/sdk_p90/1.1.38/include/aliyun/paho_mqtt/: MQTTAsync.h  MQTTClient.h
libs/sdk_p90/1.1.38/include/mbedtls/: bignum.h  config.h
libs/sdk_p90/1.1.38/libs/: scatter_MainApp.scl  scatter_SubApp.scl
libs/sdk_p90/1.1.41/: readme
libs/sdk_qr/1.1.32/include/: MercurySystem.h
libs/sdk_qr/1.1.32/include/V2_2_2/: MercuryAudio.h  MercuryBase64.h  MercuryBattery.h  MercuryFota.h  MercuryGpio.h  MercuryLittlefs.h  MercuryNet.h  MercurySpi.h  MercuryTimer.h  MercuryTlsAes.h  SDK_Version.h
libs/sdk_qr/1.1.32/include/V2_3_4/: MercuryGraphics.h  MercuryLibVer.h  MercuryNLed.h  MercuryThread.h  MercuryTlsGcm.h  MercuryVKey.h  SDK_Version.h
libs/sdk_qr/1.1.32/include/aliyun/iot/: iot_import.h
libs/sdk_qr/1.1.32/include/aliyun/iot/utils/: json_parser.h  lite-utils.h  string_utils.h
libs/sdk_qr/1.1.32/include/aliyun/iot/utils/digest/: utils_base64.h  utils_hmac.h  utils_sha1.h
libs/sdk_qr/1.1.32/include/aliyun/iot/utils/misc/: utils_httpc.h
libs/sdk_qr/1.1.32/include/mbedtls/: check_config.h  debug.h  net_sockets.h
libs/sdk_qr/1.1.32/libs/: scatter_SingaleMainApp.scl
sbin/: _cmdtool.py  _configParser.py  _device.py  _timer.py  fastboot.ini  sdmclient.ini  upd.tmp
tools/: gb2312_check.py
tools/AppLoad/: APPLoad Mannul.doc  AppLoad.ini
tools/BMP2RLE/: readme.txt
tools/USBDriver/: install mannul.docx
tools/bmp565/: readme.docx
tools/security/: smartpeak_qr.key
tools/ziku/: asc_16x8_B  asc_24x12_B  gbk16x16  gbkunicodemap  hz_16x16_B  hz_24x24_B  wzk16s  wzk16s_B  wzk24s  wzk24s_B
